--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.4</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.3</version>
+    </dependency>
     <!-- 第三部分：数据库和mybatis -->
     <!-- 数据库 -->
     <dependency>
